feat(api): remove business colour
